# jailbreak-shield

./: .env.example  .gitignore  .gitignore.updated  .vercelignore  BLOG_POST.md  BLOG_POST_DRAFT.md  COMPLETE_SUMMARY.md  COMPLETION_REPORT.md  CONTRIBUTING.md  FILE_MANIFEST.md  HACKERNEWS_POST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LAUNCH_CHECKLIST.md  LAUNCH_COMMANDS.bat  LAUNCH_COMMANDS.sh  LAUNCH_ROADMAP.md  LICENSE  LINKEDIN_POST.md  MANUAL_DEPLOY.md  PITCH.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SECURITY.md  SOCIAL_MEDIA_CONTENT.md  START_HERE.md  TWITTER_THREAD.md  VERCEL_DEPLOYMENT.md  VERCEL_QUICK_START.md  deploy.sh  pyproject.toml  requirements.txt  run_api.bat  setup.py  start_aegis.bat  test_layer2.py  test_production_comprehensive.py  test_report_20260118_182122.json  test_report_20260118_182313.json  (+3 more)
.github/workflows/: ci.yml
api/: index.py
api/app/: config.py  main.py  models.py
api/app/routers/: analyze.py  monitor.py
data/: patterns.json
demo/: README.md  app.py  requirements-vercel.txt  requirements.txt  vercel.json  vercel.py  vercel_helper.py
docs/: API.md  ARCHITECTURE.md  DATASET.md  DEMO.md  DEPLOYMENT.md
extensions/vscode/: extension.js  package.json
hub/: README.md  patterns.json
jailbreak_shield/: __init__.py  cache.py  config.py  layer1_static.py  layer2_semantic.py  layer2_sentry.py  layer3_oracle.py  layer4_karma.py  logger.py  metrics.py  patterns.py  rate_limiter.py  sanitizer.py  shield.py
scripts/: analyze_results.py  benchmark.py  benchmark_l1_only.py  collect_jailbreaks.py  test_claude.py
sdks/node/: README.md  index.ts  package.json  tsconfig.json
tests/: test_app_integration.py  test_cache.py  test_integration.py  test_layer1.py  test_layer2.py  test_layer3.py  test_layer4.py  test_metrics.py  test_rate_limiter.py  test_sanitizer.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/v1/analyze/: route.ts
web/app/console/: page.tsx
(+1 files in other folders)
